--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ __pycache__/
 ################################### TOOLS ###################################
 #===== Logs =====#
 logs/
+*.yml
+*.gif
